# axium

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  agent-run.sh  config.example.json  install.sh  setup.sh  soul.example.md  soul.md
axium-skills/rust-development/: guidelines.md
src/: main.rs  watcher.rs  worker.rs
src/agent/: classifier.rs  compactor.rs  mod.rs  router.rs  sonnet.rs
src/channels/: cli.rs  telegram.rs
src/config/: loader.rs
src/db/: history.rs  mod.rs  tasks.rs
src/memory/: store.rs
src/plugins/: mod.rs
src/tools/: browser.rs  depgraph.rs  email.rs  mod.rs  project.rs  search.rs  terminal.rs
src/tui/: server.rs
static/: index.html
